replace menu icon with img

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -160,6 +160,10 @@ $colors: (
 ion-content {
     // padding-bottom: 25px;
 }
+.avatar-menu-icon{ 
+    height: 30px; 
+    border-radius: 50%; 
+} 
 ion-segment-button{
   border-radius: 0px!important;
   border: none!important;
