--- a/src/app/app.html
+++ b/src/app/app.html
@@ -9,7 +9,7 @@
     <div *ngIf="isLogged == false" menuToggle (click)="openLoginScreen()" class="avatarDiv" dir="{{direcR}}">
       <ion-item no-lines no-border>
         <ion-avatar item-start>
-            <img src="assets/img/avatar.png">
+          <img [src]="this.thumb == null ? 'assets/img/avatar.png' : this.thumb" onerror="src = 'assets/img/avatar.png'">
         </ion-avatar>
       </ion-item>
       <div class="avatarName">
@@ -82,7 +82,7 @@
         <div *ngIf="isLogged == false" menuToggle (click)="openLoginScreen()" class="avatarDiv">
           <ion-item no-lines no-border>
             <ion-avatar item-start>
-                <img src="assets/img/avatar.png">
+              <img [src]="this.thumb == null ? 'assets/img/avatar.png' : this.thumb" onerror="src = 'assets/img/avatar.png'">
             </ion-avatar>
           </ion-item>
           <div class="avatarName">
