hide categories bar, add changes in UI

--- a/src/pages/used-msg/used-msg.scss
+++ b/src/pages/used-msg/used-msg.scss
@@ -12,7 +12,7 @@ page-used-msg {
         margin: 10px;
         padding-top: 5px;
         border-radius: 5px!important;
-        height: 95%;
+        // height: 95%;
         // border: 0.5px dotted color($colors, borderColor2);
        
     }
